power: Do not emit multiple 'Changed' signals when recalculating

We were issuing up to three changed signals, and always doing at least one when
nothing had actually changed.
Ensure we only send one signal, and only send that if something was different
from before.

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=659204